Made changes to meet requirements. Modifications to attempt to host on heroku.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     },
     "rules" :{
         "react/jsx-filename-extension": "off",
-        "linebreak-style": "off"
+        "linebreak-style": "off",
+        "no-prototype-builtins": "off"
     }
 }
