--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,10 @@
     "express": "^4.16.3",
     "jest": "^23.2.0",
     "lodash": "^4.17.10",
-    "supertest": "^3.1.0"
+    "sqlite3": "^4.0.2"
   },
   "scripts": {
-    "start": "node server.js",
-    "test": "jest --watchAll"
+    "start": "node server.js"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
