--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {},
   "proxy": "http://localhost:8080",
   "scripts": {
+    "deploy-heroku": "git subtree push --prefix production heroku master",
     "frontend": "cd ./frontend && npm run start",
     "server": "cd ./server && node server.js",
     "start": "cross-os start",
